<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalculatorActivity">

    <LinearLayout
        android:id="@+id/layout_display"
        android:layout_width="409dp"
        android:layout_height="200dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/layout_display_history"
            android:layout_width="match_parent"
            android:layout_height="99dp"
            android:orientation="vertical"
            android:textAlignment="center">

            <TextView
                android:id="@+id/textView_history_display"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical|end"
                android:ems="10"
                android:gravity="center_vertical|end"
                android:text=""
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_display_input"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_input_display"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical|end"
                android:ems="10"
                android:gravity="center_vertical|end"
                android:text=""
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_pad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_display"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:id="@+id/layout_pad_line5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_key_memory_read"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:background="@drawable/button_key"
                android:gravity="center"
                android:text="@string/memory_read"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_key_memory_clear"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:background="@drawable/button_key"
                android:gravity="center"
                android:text="@string/memory_clear"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_key_memory_add"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:background="@drawable/button_key"
                android:gravity="center"
                android:text="@string/memory_add"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_key_memory_subtract"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:background="@drawable/button_key"
                android:gravity="center"
                android:text="@string/memory_subtract"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_pad_line4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_key_clear"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:background="@drawable/button_key"
                android:gravity="center"
                android:text="@string/clear"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_key_switch_sign"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:background="@drawable/button_key"
                android:gravity="center"
                android:text="@string/switch_sign"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_key_percent"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:background="@drawable/button_key"
                android:gravity="center"
                android:text="@string/percent"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_key_divide"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:background="@drawable/button_key"
                android:gravity="center"
                android:text="@string/divide"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_pad_line3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_key_seven"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:background="@drawable/button_key"
                android:gravity="center"
                android:text="@string/seven"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_key_eight"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:background="@drawable/button_key"
                android:gravity="center"
                android:text="@string/eight"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_key_nine"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:background="@drawable/button_key"
                android:gravity="center"
                android:text="@string/nine"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_key_multiply"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:background="@drawable/button_key"
                android:gravity="center"
                android:text="@string/multiply"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_pad_line2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_key_four"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:background="@drawable/button_key"
                android:gravity="center"
                android:text="@string/four"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_key_five"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:background="@drawable/button_key"
                android:gravity="center"
                android:text="@string/five"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_key_six"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:background="@drawable/button_key"
                android:gravity="center"
                android:text="@string/six"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_key_subtract"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:background="@drawable/button_key"
                android:gravity="center"
                android:text="@string/subtract"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_pad_line1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_key_one"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:background="@drawable/button_key"
                android:gravity="center"
                android:text="@string/one"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_key_two"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:background="@drawable/button_key"
                android:gravity="center"
                android:text="@string/two"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_key_three"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:background="@drawable/button_key"
                android:gravity="center"
                android:text="@string/three"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_key_add"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:background="@drawable/button_key"
                android:gravity="center"
                android:text="@string/add"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_pad_line0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_key_zero"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:background="@drawable/button_key"
                android:gravity="center"
                android:text="@string/zero"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_key_comma"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:background="@drawable/button_key"
                android:gravity="center"
                android:text="@string/comma"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_key_backspace"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:background="@drawable/button_key"
                android:gravity="center"
                android:text="@string/backspace"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_key_equal"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:background="@drawable/button_key"
                android:gravity="center"
                android:text="@string/equal"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_pad">

        <Button
            android:id="@+id/button_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_back" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>